<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryAmm"
    tools:context="com.siskopsya.amm.additional.SettingActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:background="@color/colorPrimaryAmm">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_20sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_40sdp"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:background="@color/white"
                    >
                    <ImageView
                        android:id="@+id/photo_profile"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:background="@drawable/userprofile"
                        />
                    <TextView
                        android:id="@+id/sambutan_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/_20sdp"
                        android:textColor="@color/colorPrimaryAmm"
                        android:text="@string/sambutan_profile"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingTop="@dimen/_5sdp" />
                    <TextView
                        android:id="@+id/nama_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/_22sdp"
                        android:lines="2"
                        android:textColor="@color/colorPrimaryAmm"
                        android:text="Nama Kamu"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingTop="@dimen/_5sdp" />
                    <TextView
                        android:id="@+id/alamat_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/colorPrimaryAmm"
                        android:text="@string/alamat_perusahaan"
                        android:layout_gravity="center"
                        android:minLines="1"
                        android:maxLines="4"
                        android:gravity="center"
                        android:paddingTop="@dimen/_5sdp"
                        />
                    <View
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_400"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/grey_900"
                        android:text="Mau mengubah password?"
                        android:layout_gravity="center"
                        android:minLines="1"
                        android:maxLines="4"
                        android:gravity="center"
                        android:paddingTop="@dimen/_35sdp"
                        />
                    <androidx.cardview.widget.CardView
                        android:id="@+id/ganti_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/colorPrimaryAmm"
                        app:cardCornerRadius="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginBottom="@dimen/_8sdp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_8sdp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textSize="@dimen/_14sdp"
                                android:textColor="@color/white"
                                android:text="Ganti Password"
                                android:layout_gravity="center"
                                android:minLines="1"
                                android:maxLines="4"
                                android:gravity="center"
                                />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_20sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:background="@color/colorPrimaryAmm"
                    >
                    <ImageView
                        android:id="@+id/logo_perusahaan"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:background="@drawable/logo_app"/>
                    <TextView
                        android:id="@+id/nama_perusahaan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textSize="@dimen/_22sdp"
                        android:textColor="@color/white"
                        android:text="@string/nama_perusahaan"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingTop="@dimen/_5sdp" />
                    <TextView
                        android:id="@+id/tentang_perusahaan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:textSize="@dimen/_16sdp"
                        android:textColor="@color/white"
                        android:text="@string/tentang_perusahaan"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingTop="@dimen/_5sdp"
                        />
                    <TextView
                        android:id="@+id/alamat_perusahaan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/white"
                        android:text="@string/alamat_perusahaan"
                        android:layout_gravity="center"
                        android:minLines="1"
                        android:maxLines="4"
                        android:gravity="center"
                        android:paddingTop="@dimen/_5sdp"
                        />
                    <TextView
                        android:id="@+id/kontak_perusahaan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/white"
                        android:text="@string/kontak_perusahaan"
                        android:layout_gravity="center"
                        android:minLines="1"
                        android:maxLines="4"
                        android:gravity="center"
                        android:paddingTop="@dimen/_5sdp"
                        />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>