<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/layout_utama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/_25sdp">
            <LinearLayout
                android:id="@+id/layout_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/_18sdp"
                android:paddingRight="@dimen/_18sdp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_83sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/logo_app"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_18sdp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_18sdp"
                android:paddingRight=   "@dimen/_18sdp"
                android:orientation="vertical">

                <TextView
                    android:gravity="center"
                    android:text="Selamat Datang Di"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold"
                    app:fontFamily="@font/roboto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="center"
                    android:text="SMART UMMAT"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    app:fontFamily="@font/roboto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="Login untuk mengakses akun."
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_login_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_18sdp"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeColor="@color/colorPrimaryAmm"
                        android:textColorHint="@color/colorPrimaryAmm"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textCursorDrawable="@drawable/color_cursor"
                            android:textColorLink="@color/colorPrimaryAmm"
                            android:maxLines="1"
                            android:hint="@string/no_anggota"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:boxStrokeColor="@color/colorPrimaryAmm"
                        android:textColorHint="@color/colorPrimaryAmm"
                        app:passwordToggleEnabled="true"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:textColorHint="@color/colorPrimaryAmm"
                            android:textCursorDrawable="@drawable/color_cursor"
                            android:textColorLink="@color/colorPrimaryAmm"
                            android:inputType="textPassword"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btn_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_radius"
                        android:fontFamily="@font/roboto"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/_2sdp">
                    <TextView
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:text="Sistem Informasi Koperasi Syariah."
                        android:textStyle="bold"
                        android:textSize="@dimen/_14sdp" />
                    <TextView
                        android:id="@+id/appversion"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:text="App version "
                        android:textStyle="bold"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>